--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     :root{font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; color:#222}
     body{margin:0;line-height:1.5;background:#f7f7f8}
-    .banner{background:#0b5cff;color:#fff;padding:20px 50px;display:flex;align-items:center;gap:16px}
+    .banner{background:darkblue;color:#fff;padding:20px 50px;display:flex;align-items:center;gap:16px}
     .banner img{width:100px;object-fit:contain;border-radius:8px;background:#fff;padding:2px}
     .banner h1{margin:0;font-size:40px}
     .container{max-width:1200px;margin:28px auto;padding:0 16px}
